--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
+
+
 def keyAliasProperty
 def keyPasswordProperty
 def storeFileProperty
@@ -47,8 +51,8 @@ android {
         applicationId "ru.suleymanovtat.githubclient"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0.1"
+        versionCode 2
+        versionName "1.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         project.ext.set("archivesBaseName", "github_client-" + defaultConfig.versionName)
     }
@@ -64,6 +68,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "String", "BASE_URL", '"https://api.github.com/"'
         }
+    }
+    dataBinding{
+        enabled = true
     }
 }
 
